--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,7 @@
 /* 
  *
- *	Meaghan Choi Stylesheet
- * 	V01
+ *  Meaghan Choi Stylesheet
+ *  V01
  *
  */
 
@@ -77,9 +77,29 @@ b {
   text-decoration: underline;
 }
 
+a:visited {
+  color: #13acc2;
+}
+
+.circle {
+  width: 76px;
+  height: 76px;
+  border-radius: 38px;
+  background-color: #13acc2;
+  text-align: center;
+  margin-bottom: 40px !important;
+}
+
 .center {
   margin: 0 auto;
   text-align: center;
+}
+
+.face {
+  width: 70px;
+  height: 70px;
+  border-radius: 35px;
+  margin-top: 2.5px;
 }
 
 .left {
@@ -124,6 +144,13 @@ b {
   margin-bottom: 0 !important;
 }
 
+.size {
+  width: 50%;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
+}
+
 
 /* Stroke Style */
 
@@ -138,6 +165,7 @@ b {
   padding-bottom: 100px;
   margin-bottom: 80px;
 }
+
 
 /* Navigation */
 
@@ -180,14 +208,13 @@ b {
   border-bottom: 2px solid #13acc2;
 }
 
+
 /* Project Pages */
 
-
 .blog_post {
-  -webkit-mask-image: -webkit-gradient(linear, left 10%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+  -webkit-mask-image: -webkit-gradient(linear, left 10%, left bottom, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
   padding-top: 50px;
 }
-
 
 .intro {
   max-width: 700px;
@@ -249,11 +276,11 @@ b {
 }
 
 .constraints ul li {
-    list-style-type: disc;
+  list-style-type: disc;
 }
 
 .constraints ol li {
-    list-style-type: decimal;
+  list-style-type: decimal;
 }
 
 .constraints a {
@@ -287,8 +314,8 @@ b {
   max-width: 700px;
   width: 90%;
   margin: 70px auto 60px auto;
-    text-align: center;
-  }
+  text-align: center;
+}
 
 .bottom_nav ul li {
   display: inline-block;
@@ -298,16 +325,15 @@ b {
 .bottom_nav ul li::last-child {
   display: inline-block;
   padding-right: 0px;
-  }
-
+}
 
 .bottom_nav ul li a {
-    font-family: 'Lato', sans-serif;
-    color: #c5c5c5;
-    font-weight: 400;
-    font-size: 14px;
-    border-bottom: 1px solid transparent;
-    transition: all 0.3s ease-in-out;
+  font-family: 'Lato', sans-serif;
+  color: #c5c5c5;
+  font-weight: 400;
+  font-size: 14px;
+  border-bottom: 1px solid transparent;
+  transition: all 0.3s ease-in-out;
 }
 
 .bottom_nav ul li a:hover {
@@ -315,7 +341,6 @@ b {
   border-bottom: 1px solid #13acc2;
   cursor: pointer;
 }
-
 
 .constraints a {
   color: #13acc2;
@@ -353,7 +378,6 @@ b {
 /* No animate */
 
 @media screen and (max-width: 960px) {
-
   .main_copy,
   .main_copy.process {
     margin: 40px auto;
